# Kura

./: BENCHMARK_REPORT.md  BENCHMARK_VISUAL.md  BOOTSTRAP_CHECKPOINT_24MAR2026.md  BOOTSTRAP_MILESTONE.md  CROSS_COMPILATION.md  CROSS_COMPILATION_SUMMARY.md  Cargo.toml  EJEMPLO_KUP_PRACTICO.md  ESTADO_ACTUAL_BOOTSTRAP.md  ESTRUCTURA_PROYECTO.md  EXE_COMPILADOR_STANDALONE.md  FASE_2_PROGRESO.md  FASE_3_COMPLETA.md  FASE_4_BOOTSTRAPPING.md  FASE_FINAL_COMPILADOR_COMPLETO.md  GUIA_ESTRUCTURA_DESARROLLO.md  GUIA_SIGUIENTES_PASOS.md  GUIA_USAR_COMPILADOR_STANDALONE.md  HITO_EJECUTABLES_GENERADOS.md  KUP_CONCLUSION_FINAL.md  KUP_DOCUMENTACION_INDICE.md  KUP_EJECUTABLE_README.md  KUP_GUIA_COMPLETA.md  KUP_INVENTARIO.md  KUP_PROYECTO_COMPLETADO.md  KUP_QUICK_START.md  KUP_REFERENCIA_RAPIDA.md  KUP_RESUMEN_EJECUTIVO.md  KUP_STATUS_FINAL.md  LLVM_BACKEND_ESTADO.md  MODULES_SYSTEM.md  PROYECTO_KURA.md  QUICK_REFERENCE.md  README_KUP.md  REORGANIZACION_COMPLETADA.md  RESUMEN_EJECUTIVO_FINAL.md  TARGET_COMPARISON.md  bench_complex.kr  bench_medium.kr  bench_simple.kr  (+30 more)
.cargo/: config.toml
.github/: copilot-instructions.md
kura_modules/: eval.kr  kura_bootstrap.kr  lexer.kr  matematicas.kr  parser.kr  test_lexer.kr
src/: ast.rs  codegen.rs  debug_if.kr  ejemplo_modulo.kr  evaluator.rs  kura_runtime.ll  lexer.rs  lib.rs  main.rs  package_manager.rs  parser.rs  test_arithmetic.kr  test_arr.kr  test_bool.KR  test_compile.kr  test_for.kr  test_func.kr  test_heap.kr  test_if.kr  test_if_semicolon.kr  test_io.kr  test_match.kr  test_modulos.kr  test_opt.kr  test_str.kr  test_struct.KR  (+2 more)
(+3 files in other folders)
