[package]
name = "kura"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kura"
path = "src/bin/kura.rs"

[[bin]]
name = "kup"
path = "src/bin/kup.rs"

[dependencies]
# Para descargar librerías de internet
reqwest = { version = "0.11", features = ["blocking"] }
# Para entender y escribir el archivo kura.toml
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"