[package]
name = "kura"
version = "0.1.0"
edition = "2021"
default-run = "kura"

[lib]
path = "language/lib.rs"

[[bin]]
name = "kura"
path = "language/bin/kura.rs"

[[bin]]
name = "kup"
path = "language/bin/kup.rs"

[dependencies]
# Para descargar librerías de internet
reqwest = { version = "0.11", features = ["blocking"] }
# Para entender y escribir el archivo kura.toml
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"